Add __warn_references to getdirentries(), per PR 37730. Okayed by Christos a while back.